@@ -1,1 +1,0 @@
-kind: deprecated_plugin
