@@ -1,15 +1,0 @@
-# Unique project name
-name: deprecation-warnings
-
-# Required BuildStream version
-min-version: 2.0
-
-# Subdirectory where elements are stored
-element-path: elements
-
-plugins:
-
-- origin: local
-  path: plugins/elements
-  elements:
-  - deprecated_plugin
